--- a/intento/index.html
+++ b/intento/index.html
@@ -13,8 +13,9 @@
   </style>
 </head>
 <body>
-  <script src="peces.js"></script>
   <script src="enemigos.js"></script>
+  <script src="vision.js"></script>
+  <script src="peces.js"></script>
   <script src="juego.js"></script>
 </body>
 </html>
