--- a/intento/index.html
+++ b/intento/index.html
@@ -3,7 +3,6 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Menú de Inicio</title>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/pixi.js/5.3.3/pixi.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/matter-js/0.18.0/matter.min.js"></script>
   
@@ -17,5 +16,6 @@
   <script src="vision.js"></script>
   <script src="peces.js"></script>
   <script src="juego.js"></script>
+  <script src="jugador.js"></script>
 </body>
 </html>
