--- a/intento/index.html
+++ b/intento/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/pixi.js/5.3.3/pixi.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/pixi-filters/4.2.2/pixi-filters.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/matter-js/0.18.0/matter.min.js"></script>
   
   <style>
@@ -12,10 +13,12 @@
   </style>
 </head>
 <body>
+  <script src="cuadricula.js"></script>
   <script src="enemigos.js"></script>
   <script src="vision.js"></script>
   <script src="peces.js"></script>
   <script src="juego.js"></script>
   <script src="jugador.js"></script>
+  <script src="arpon.js"></script>
 </body>
 </html>
