--- a/intento/index.html
+++ b/intento/index.html
@@ -13,12 +13,13 @@
   </style>
 </head>
 <body>
-  <script src="cuadricula.js"></script>
-  <script src="enemigos.js"></script>
-  <script src="vision.js"></script>
-  <script src="peces.js"></script>
-  <script src="juego.js"></script>
-  <script src="jugador.js"></script>
-  <script src="arpon.js"></script>
+  <script src="1-grilla.js"></script>
+  <script src="2-cuadricula.js"></script>
+  <script src="7-enemigos.js"></script>
+  <script src="8-vision.js"></script>
+  <script src="6-peces.js"></script>
+  <script src="3-juego.js"></script>
+  <script src="4-jugador.js"></script>
+  <script src="5-arpon.js"></script>
 </body>
 </html>
