herencia para tiburon y peces, tiburones ven a los peces. falta peces vision, escapar, y falta tiburon atrapar

--- a/intento/index.html
+++ b/intento/index.html
@@ -15,6 +15,9 @@
 <body>
   <script src="grid.js"></script>
   <script src="cuadricula.js"></script>
+  <script src="celda.js"></script>
+  <script src="utiles.js"></script>
+  <script src="entidades.js"></script>
   <script src="enemigos.js"></script>
   <script src="vision.js"></script>
   <script src="peces.js"></script>
