--- a/intento/index.html
+++ b/intento/index.html
@@ -18,6 +18,7 @@
   <script src="utiles.js"></script>
   <script src="entidades.js"></script>
   <script src="enemigos.js"></script>
+  <script src="barraDeVida.js"></script>
   <script src="vision.js"></script>
   <script src="peces.js"></script>
   <script src="juego.js"></script>
