incorporacion del hud

--- a/intento/index.html
+++ b/intento/index.html
@@ -19,6 +19,8 @@
   <script src="entidades.js"></script>
   <script src="enemigos.js"></script>
   <script src="barraDeVida.js"></script>
+  <script src="contadorDeTiburones.js"></script>
+  <script src="tutorial.js"></script>
   <script src="vision.js"></script>
   <script src="peces.js"></script>
   <script src="juego.js"></script>
